--- a/DVD_Rental_Analysis_(final).ipynb
+++ b/DVD_Rental_Analysis_(final).ipynb
@@ -29,11 +29,15 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Read the CSV file into a DataFrame\n",
+    "# There are only 2 stores and they are located in 2 countries, Australia and Canada\n",
+    "# 2 tables in the form of csv file are prepared\n",
+    "# They are queried by SQL queryDailyRevenueAustralia.sql & queryDailyRevenueCanada.sql\n",
+    "\n",
+    "# Read the CSV files into DataFrames\n",
     "dfRevAus = pd.read_csv('tableDailyRevenueAustralia.csv')\n",
     "dfRevCan = pd.read_csv('tableDailyRevenueCanada.csv')\n",
     "\n",
-    "# Plot a time-series plot showing daily total revenue for three countries \n",
+    "# Plot a time-series plot showing daily total revenue for two countries \n",
     "plt.plot(dfRevAus['date_of_revenue'], dfRevAus['daily_revenue'], '-x', label='Austalia')\n",
     "plt.plot(dfRevCan['date_of_revenue'], dfRevCan['daily_revenue'], '-o', label='Canada')\n",
     "\n",
@@ -60,6 +64,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# define a function of sentiment_detection\n",
+    "\n",
     "def sentiment_detection(sentence):\n",
     "    positive_words = ('happy', 'sunny', 'positive', 'triumphant', 'optimistic', 'wonderful')\n",
     "    negative_words = ('sad', 'terrible', 'frightening', 'rainy', 'scary')\n",
@@ -169,8 +175,13 @@
     }
    ],
    "source": [
+    "# A table in the form of csv file is prepared\n",
+    "# It is queried by SQL queryFilmDescription.sql\n",
+    "\n",
+    "# Read the CSV file into a DataFrame\n",
     "dfFilmDes = pd.read_csv('tableFilmDescription.csv')\n",
     "\n",
+    "# apply the sentiment_detection\n",
     "dfFilmDes['sentiment'] = dfFilmDes['description'].apply(sentiment_detection)\n",
     "dfFilmDes.head()"
    ]
@@ -258,8 +269,13 @@
     }
    ],
    "source": [
+    "# A table in the form of csv file is prepared\n",
+    "# It is queried by SQL queryFilmDescription.sql\n",
+    "\n",
     "# Read the CSV file into a DataFrame\n",
     "dfRevAllCountries = pd.read_csv('tableTotalRevenueAllCountries.csv')\n",
+    "\n",
+    "# Sorting by revenue\n",
     "dfRevAllCountriesSorted = dfRevAllCountries.sort_values('total_revenue',ascending=True)\n",
     "dfRevAllCountriesSorted.head()\n",
     "\n"
@@ -417,6 +433,8 @@
    "source": [
     "# Read the CSV file into a DataFrame\n",
     "dfRevActors = pd.read_csv('tableTotalRevenueAllActors.csv')\n",
+    "\n",
+    "# Sorting by total_revenue descendingly\n",
     "dfRevActors.sort_values('total_revenue',ascending=False).head(10)"
    ]
   },
@@ -430,13 +448,370 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>country</th>\n",
+       "      <th>language</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>English</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>United States</td>\n",
+       "      <td>English</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Argentina</td>\n",
+       "      <td>Spanish</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Spain</td>\n",
+       "      <td>Spanish</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Brazil</td>\n",
+       "      <td>Portugese</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Portugal</td>\n",
+       "      <td>Portugese</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>China</td>\n",
+       "      <td>Chinese</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Hong Kong</td>\n",
+       "      <td>Chinese</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>France</td>\n",
+       "      <td>French</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Ivory Coast</td>\n",
+       "      <td>French</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Egypt</td>\n",
+       "      <td>Arabic</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Saudi Arabia</td>\n",
+       "      <td>Arabic</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Germany</td>\n",
+       "      <td>German</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Austria</td>\n",
+       "      <td>German</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           country   language\n",
+       "0   United Kingdom    English\n",
+       "1    United States    English\n",
+       "2        Argentina    Spanish\n",
+       "3            Spain    Spanish\n",
+       "4           Brazil  Portugese\n",
+       "5         Portugal  Portugese\n",
+       "6            China    Chinese\n",
+       "7        Hong Kong    Chinese\n",
+       "8           France     French\n",
+       "9      Ivory Coast     French\n",
+       "10           Egypt     Arabic\n",
+       "11    Saudi Arabia     Arabic\n",
+       "12         Germany     German\n",
+       "13         Austria     German"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "dfCtryLang = pd.DataFrame(\n",
-    "    data={'Country':['Australia','United States',Span]}\n",
-    ")"
+    "# create a new DataFrame containing countries and corresponding official languages\n",
+    "\n",
+    "dfCountryLang = pd.DataFrame(\n",
+    "    data={'country':['United Kingdom','United States','Argentina','Spain',\n",
+    "                     'Brazil','Portugal','China','Hong Kong',\n",
+    "                     'France','Ivory Coast','Egypt','Saudi Arabia',\n",
+    "                     'Germany','Austria'],\n",
+    "          'language':['English','English','Spanish','Spanish',\n",
+    "                      'Portugese','Portugese','Chinese','Chinese',\n",
+    "                      'French','French','Arabic','Arabic',\n",
+    "                      'German','German']}\n",
+    ")\n",
+    "\n",
+    "dfCountryLang"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "6.\tUse an appropriate merge to merge that new data-frame from the last step with a dataframe from the dvd db, that gives the countries, so now countries are connected with their classification."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>country_id</th>\n",
+       "      <th>country</th>\n",
+       "      <th>last_update</th>\n",
+       "      <th>language</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>29</td>\n",
+       "      <td>Egypt</td>\n",
+       "      <td>2006-02-15 09:44:00</td>\n",
+       "      <td>Arabic</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>81</th>\n",
+       "      <td>82</td>\n",
+       "      <td>Saudi Arabia</td>\n",
+       "      <td>2006-02-15 09:44:00</td>\n",
+       "      <td>Arabic</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>23</td>\n",
+       "      <td>China</td>\n",
+       "      <td>2006-02-15 09:44:00</td>\n",
+       "      <td>Chinese</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41</th>\n",
+       "      <td>42</td>\n",
+       "      <td>Hong Kong</td>\n",
+       "      <td>2006-02-15 09:44:00</td>\n",
+       "      <td>Chinese</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>101</th>\n",
+       "      <td>102</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>2006-02-15 09:44:00</td>\n",
+       "      <td>English</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>102</th>\n",
+       "      <td>103</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>2006-02-15 09:44:00</td>\n",
+       "      <td>English</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>34</td>\n",
+       "      <td>France</td>\n",
+       "      <td>2006-02-15 09:44:00</td>\n",
+       "      <td>French</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>9</td>\n",
+       "      <td>Austria</td>\n",
+       "      <td>2006-02-15 09:44:00</td>\n",
+       "      <td>German</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>38</td>\n",
+       "      <td>Germany</td>\n",
+       "      <td>2006-02-15 09:44:00</td>\n",
+       "      <td>German</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>15</td>\n",
+       "      <td>Brazil</td>\n",
+       "      <td>2006-02-15 09:44:00</td>\n",
+       "      <td>Portugese</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "      <td>Argentina</td>\n",
+       "      <td>2006-02-15 09:44:00</td>\n",
+       "      <td>Spanish</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>86</th>\n",
+       "      <td>87</td>\n",
+       "      <td>Spain</td>\n",
+       "      <td>2006-02-15 09:44:00</td>\n",
+       "      <td>Spanish</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>2006-02-15 09:44:00</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>2006-02-15 09:44:00</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>American Samoa</td>\n",
+       "      <td>2006-02-15 09:44:00</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Angola</td>\n",
+       "      <td>2006-02-15 09:44:00</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Anguilla</td>\n",
+       "      <td>2006-02-15 09:44:00</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>7</td>\n",
+       "      <td>Armenia</td>\n",
+       "      <td>2006-02-15 09:44:00</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>8</td>\n",
+       "      <td>Australia</td>\n",
+       "      <td>2006-02-15 09:44:00</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>10</td>\n",
+       "      <td>Azerbaijan</td>\n",
+       "      <td>2006-02-15 09:44:00</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     country_id         country          last_update   language\n",
+       "28           29           Egypt  2006-02-15 09:44:00     Arabic\n",
+       "81           82    Saudi Arabia  2006-02-15 09:44:00     Arabic\n",
+       "22           23           China  2006-02-15 09:44:00    Chinese\n",
+       "41           42       Hong Kong  2006-02-15 09:44:00    Chinese\n",
+       "101         102  United Kingdom  2006-02-15 09:44:00    English\n",
+       "102         103   United States  2006-02-15 09:44:00    English\n",
+       "33           34          France  2006-02-15 09:44:00     French\n",
+       "8             9         Austria  2006-02-15 09:44:00     German\n",
+       "37           38         Germany  2006-02-15 09:44:00     German\n",
+       "14           15          Brazil  2006-02-15 09:44:00  Portugese\n",
+       "5             6       Argentina  2006-02-15 09:44:00    Spanish\n",
+       "86           87           Spain  2006-02-15 09:44:00    Spanish\n",
+       "0             1     Afghanistan  2006-02-15 09:44:00        NaN\n",
+       "1             2         Algeria  2006-02-15 09:44:00        NaN\n",
+       "2             3  American Samoa  2006-02-15 09:44:00        NaN\n",
+       "3             4          Angola  2006-02-15 09:44:00        NaN\n",
+       "4             5        Anguilla  2006-02-15 09:44:00        NaN\n",
+       "6             7         Armenia  2006-02-15 09:44:00        NaN\n",
+       "7             8       Australia  2006-02-15 09:44:00        NaN\n",
+       "9            10      Azerbaijan  2006-02-15 09:44:00        NaN"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Read the CSV file into a DataFrame\n",
+    "dfCountry = pd.read_csv('tableCountry.csv')\n",
+    "\n",
+    "dfCountryMerged = dfCountry.merge(dfCountryLang, on='country', how='left')\n",
+    "\n",
+    "dfCountryMerged.sort_values('language').head(20)"
    ]
   }
  ],
